2002-09-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db-insert.c: handle samples count overflow.
	
	* libdb/Makefile.in: db-test new target not built by default.
	* libdb/db-debug.c: more strict checking
	* libdb/db-test.c: allow db-test to be used as "db-test samples_dir/*"

2002-09-22  John Levon  <levon@movementarian.org>

	* dae/opd_stats.c: nicify
 
	* module/x86/op_model_pproc.c:
	* module/x86/op_model_athlon.c: drop macro prefixes, ws fixes

	* module/x86/op_nmi.c: fix save/restore possible crash, init
	  possible leak
 
2002-09-22  Philippe Elie <phil.el@wanadoo.fr>

	* module/x86/op_model_pproc.c: fix p6_start()
	* module/x86/op_model_athlon.c: fix athlon_start()
	* module/x86/op_nmi.c: pmc_save_registers() typo when checking
	  null for kmalloc return value
 
2002-09-20  Graydon Hoare  <graydon@redhat.com>

	* module/x86/op_x86_model.h: New interface for MSRs.
	* module/x86/op_nmi.c: Use interface.
	* module/x86/op_model_ppro.c: New, code from op_nmi.c.
	* module/x86/op_model_athlon.c: New, code from op_nmi.c.
	* module/x86/Makefile.in: Reflect new files.

2002-09-20  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: fix a bug where we broke
	  with multiple executable sections due to sorting
	  the symbols wrongly

	* libutil++/op_bfd.h: fix an outdated comment

	* dae/opd_image.c: fix comment
 
2002-09-19  Graydon Hoare  <graydon@redhat.com>

	* libop/op_events.h:
	* libop/op_events_desc.c: Move descriptions from here.
	* libop/op_events_desc.h:
	* libop/op_events.c: To here.
	(um_*): Add new static unit masks.
	(op_events): Use pointers to static unit masks.	
	* libop++/op_print_event.h:
	* libop++/op_print_event.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: 
	* utils/op_help.c: Make compatible with struct changes.

2002-09-18  John Levon  <levon@movementarian.org>

	* utils/op_start: give an example for unit mask.
 
2002-09-18  Will Cohen  <wcohen@redhat.com>

	* libop/op_mangle.c: (op_mangle_filename): Correct logic for