@@ -36,17 +36,17 @@
 #ifndef MSR_P6_EVNTSEL1
 #define MSR_P6_EVNTSEL1 0x187
 #endif
-#ifndef MSR_K7_PERFCTL0
-#define MSR_K7_PERFCTL0 0xc0010000
+#ifndef MSR_K7_EVNTSEL0
+#define MSR_K7_EVNTSEL0 0xc0010000
 #endif
-#ifndef MSR_K7_PERFCTL1
-#define MSR_K7_PERFCTL1 0xc0010001
+#ifndef MSR_K7_EVNTSEL1
+#define MSR_K7_EVNTSEL1 0xc0010001
 #endif
-#ifndef MSR_K7_PERFCTL2
-#define MSR_K7_PERFCTL2 0xc0010002
+#ifndef MSR_K7_EVNTSEL2
+#define MSR_K7_EVNTSEL2 0xc0010002
 #endif
-#ifndef MSR_K7_PERFCTL3
-#define MSR_K7_PERFCTL3 0xc0010003
+#ifndef MSR_K7_EVNTSEL3
+#define MSR_K7_EVNTSEL3 0xc0010003
 #endif
 #ifndef MSR_K7_PERFCTR0
 #define MSR_K7_PERFCTR0 0xc0010004
